# green-value-chains

./: .gitignore  .zenodo.json  CITATION.cff  Notebook.ipynb  README.md  dump_posted.py  dump_results.py  dump_spreadsheet.py  export.py  plot.py  pyproject.toml  webapp.py
config/: globPlot.yml  global.yml  globalConfig.yml  globalStyling.yml  plots.yml  webapp.yml
config/figure_config/: webapp.yml
config/figure_configs/: EnergySharePlot.yml  FlexiblePlot.yml  LevelisedPlot.yml  RecyclingPlot.yml  RelocationAnalysisPlot.yml  SensitivityPlot.yml  TotalCostPlot.yml
config/figures/: LevelisedPlot.yml  ScenarioPlot.yml  SensitivityPlot.yml  TotalCostPlot.yml
config/plot_config/: plotLevelisedCost.yml
config/plot_configs/: EnergySharePlot.yml  FlexiblePlot.yml  LevelisedPlot.yml  RecyclingPlot.yml  RelocationAnalysisPlot.yml  SensitivityPlot.yml  TotalCostPlot.yml
config/plots/: LevelisedPlot.yml  ScenarioPlot.yml  SensitivityPlot.yml  TotalCostPlot.yml
data/: DAC-capex-custom.csv  elec_prices.csv  epd_cases.csv  options.yml  other_assump.yml  other_prices.csv  prices.csv  processes.csv  routes.yml  scenarios.csv  technologies.csv  transp_cost.csv  value_chains.yml  volumes.csv
input/: app.yml  figure_print.yml  plots.yml  webapp.yml
input/data/: assumptions.yml  cost_data.yml  cp.yml  data.xlsx  options.yml  prices.csv  process_routes.yml  processes.csv  ref_data.yml  routes.yml  technologies.csv  technology_data_v06_lg_2022-05-02.xlsx  technology_data_v07_pcv_2022-05-20.xlsx  units.yml  ~$data_v03.xlsx
input/figure_config/: print.yml  webapp.yml
input/figures/: fig1.yml  fig2.yml  fig3.yml  figS1.yml
input/plot_config/: globalConfig.yml  plotCostDiffElecPrice.yml  plotCostDiffH2Transp.yml  plotFlexibleCost.yml  plotLevelisedCost.yml  plotRecyclingCost.yml  (+1 more)
src/: config_load.py  ctrls.py  load.py  proc.py  update.py  utils.py
(+81 files in other folders)
