[tool.poetry]
name = "green-value-chains"
version = "0.1.0"
description = ""
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
piw = {git = "git@github.com:PhilippVerpoort/piw.git"}
posted = {git = "git@github.com:PhilippVerpoort/posted.git", rev = "v0.2.0"}
kaleido = "0.2.1"


[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
