[tool.poetry]
name = "green-value-chains"
version = "0.1.0"
description = ""
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
piw = {git = "https://github.com/PhilippVerpoort/piw.git", rev="v0.2.2"}
posted = {git = "https://github.com/PhilippVerpoort/posted.git", rev = "v0.2.1"}
kaleido = "0.2.1"
openpyxl = "^3.1.2"
pandas = "<2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
